Adicionando configuração para jwtToken e personalizando input para inserção do JWT no Swagger.
